--- a/konferans.html
+++ b/konferans.html
@@ -27,7 +27,7 @@
     </div>
     <div class="video-container">
       <video controls width="100%" height="500px">
-        <source src="video.mp4" type="video/mp4">
+        <source src="./video/IMG_3167.MP4" type="video/mp4">
       </video>
     </div>
       <section class="ekip">
