--- a/konferans.html
+++ b/konferans.html
@@ -26,9 +26,7 @@
       <h1>35.ROTARACT KONFERANSI</h1>
     </div>
     <div class="video-container">
-      <video controls width="100%" height="500px">
-        <source src="./video/IMG_3167.MP4" type="video/mp4">
-      </video>
+      <iframe width="1120" height="630" src="https://youtu.be/lbMnEFBWdh8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
       <section class="ekip">
         <h2>Merhaba Değerli Dostlarımız,</h2>
