--- a/konferans.html
+++ b/konferans.html
@@ -26,7 +26,8 @@
       <h1>35.ROTARACT KONFERANSI</h1>
     </div>
     <div class="video-container">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/lbMnEFBWdh8?si=I8vWA8uvpdidUSw6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>    </div>
+      <iframe width="1120" height="630" src="https://www.youtube.com/embed/lbMnEFBWdh8?si=T1ziezsUhSaAEkxP&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
       <section class="ekip">
         <h2>Merhaba Değerli Dostlarımız,</h2>
         <div class="uyeler">
