--- a/konferans.html
+++ b/konferans.html
@@ -26,7 +26,9 @@
       <h1>35.ROTARACT KONFERANSI</h1>
     </div>
     <div class="video-container">
-      <iframe width="1120" height="630" src="https://www.youtube.com/embed/lbMnEFBWdh8?si=T1ziezsUhSaAEkxP&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <div class="video-wrapper"> 
+        <iframe width="1120" height="630" src="https://www.youtube.com/embed/lbMnEFBWdh8?si=T1ziezsUhSaAEkxP&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      </div>
     </div>
       <section class="ekip">
         <h2>Merhaba Değerli Dostlarımız,</h2>
