--- a/kayitol.html
+++ b/kayitol.html
@@ -88,7 +88,7 @@
           <p>Banka İsmi: AKBANK</p>
           <p>Hesap İsmi: Atakum Rotaract Kulübü Derneği</p>
           <p>IBAN: TR28 0004 6006 2188 8000 1786 88</p>
-          <p>Açıklama: Kulüp Adı - BAĞIŞ</p>
+          <p>Açıklama: İsim Soyisim - Kulüp Adı - BAĞIŞ</p>
         </div>
       </section>
 
