--- a/kayitol.html
+++ b/kayitol.html
@@ -18,6 +18,7 @@
       <a href="./konferans.html">Konferans</a>
       <a href="./takımlar.html">Takımlar</a>
       <a href="./otel.html">Otel</a>
+      <a href="./paketler.html">Paketler</a>
     </nav>
     <a href="./kayitol.html" class="kayit-ol">KAYIT OLUN</a>
   </header>
@@ -27,60 +28,6 @@
           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdgAWA_2r4y7w74C-cmTnFPeKQOgtMQAB5nQumeFuIondn7UA/viewform?embedded=true" width="640" height="1120" frameborder="0" marginheight="0" marginwidth="0">Yükleniyor…</iframe>
       </div>
 
-      <section class="paketlerimiz">
-        <h2>Paketlerimiz</h2>
-        <div class="paket-kutulari">
-          <div class="paket">
-            <h3>ANKARA PALACE</h3>
-            <ul>
-              <li>1 Kişilik Oda</li>
-              <li>2 Gece</li>
-              </ul>
-            <p class="fiyat">Kişi Başı Ücret: 11.165₺</p>
-          </div>
-          <div class="paket">
-            <h3>PERA PALACE</h3>
-            <ul>
-              <li>2 Kişilik Oda</li>
-              <li>2 Gece</li>
-              </ul>
-            <p class="fiyat">Kişi Başı Ücret: 7.805₺</p>
-          </div>
-          <div class="paket">
-            <h3>SÜMER PALACE</h3>
-            <ul>
-              <li>3 Kişilik Oda</li>
-              <li>2 Gece</li>
-              </ul>
-            <p class="fiyat">Kişi Başı Ücret: 7.525₺</p>
-          </div>
-          <div class="paket">
-            <h3>BANDIRMA</h3>
-            <ul>
-              <li>2 Kişilik Oda</li>
-              <li>1 Gece</li>
-              </ul>
-            <p class="fiyat">Kişi Başı Ücret: 5.005₺</p>
-          </div>
-          <div class="paket">
-            <h3>BEYOĞLU</h3>
-            <ul>
-              <li>1 Kişilik Oda</li>
-              <li>1 Gece</li>
-              </ul>
-            <p class="fiyat">Kişi Başı Ücret: 6.685₺</p>
-          </div>
-          <div class="paket">
-            <h3>DOLMABAHÇE</h3>
-            <ul>
-              <li>3 Kişilik Oda</li>
-              <li>1 Gece</li>
-              </ul>
-            <p class="fiyat">Kişi Başı Ücret: 4.865₺</p>
-          </div>
-          </div>
-      </section>
-  
       <section class="odeme-bilgileri">
         <h2>Ödeme Bilgileri</h2>
         <p>Lütfen ödemeyi aşağıdaki hesaba yapınız:</p>
