--- a/paketler.html
+++ b/paketler.html
@@ -1,35 +1,75 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>1923 Cumhuriyet Konferansı | Samsun Atakum Rotaract</title>
-  <link rel="icon" type="image/x-icon" href="./images/favicon.png">
-  <link rel="stylesheet" href="./paketler.css">
-  <script src="https://kit.fontawesome.com/75a9b9d92e.js" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Paketlerimiz | Samsun Atakum Rotaract</title>
+    <link rel="stylesheet" href="paketler.css">
 </head>
 <body>
-  <header>
-    <div class="logo">
-      <img src="./images/logo.png">
-      </div>      
-    <nav>
-      <a href="./index.html">Ana Sayfa</a>
-      <a href="./konferans.html">Konferans</a>
-      <a href="./takımlar.html">Takımlar</a>
-      <a href="./otel.html">Otel</a>
-    </nav>
-    <a href="./kayitol.html" class="kayit-ol">KAYIT OLUN</a>
-  </header>
-    <main>
+    <header>
+        </header>
 
-   </main>
-   <footer>
-    <div class="sosyal-medya">
-      <a href="https://www.instagram.com/konferans35"><i class="fab fa-instagram"></i></a>
-      <a href="mailto:35.konferans@gmail.com"><i class="fa-solid fa-envelope"></i></a>
-    </div>
-    <p class="telif-hakkı">© 2024 Demir Bülbüloğlu - Tüm Hakları Saklıdır.</p>
-  </footer>
+    <main>
+        <section class="paketlerimiz">
+            <div class="container"> 
+                <h2>Paketlerimiz</h2>
+
+                <div class="paket-kutulari">
+                    <div class="paket">
+                        <h3>ANKARA PALACE</h3>
+                        <ul>
+                            <li>1 Kişilik Oda</li>
+                            <li>2 Gece</li>
+                        </ul>
+                        <p class="fiyat">Kişi Başı Ücret: 11.165₺</p>
+                    </div>
+                    <div class="paket">
+                        <h3>PERA PALACE</h3>
+                        <ul>
+                            <li>2 Kişilik Oda</li>
+                            <li>2 Gece</li> 
+                        </ul>
+                        <p class="fiyat">Kişi Başı Ücret: 7.805₺</p>
+                    </div>
+                    <div class="paket">
+                        <h3>SÜMER PALACE</h3>
+                        <ul>
+                            <li>3 Kişilik Oda</li>
+                            <li>2 Gece</li>
+                        </ul>
+                        <p class="fiyat">Kişi Başı Ücret: 7.525₺</p>
+                    </div>
+                    <div class="paket">
+                        <h3>BANDIRMA</h3>
+                        <ul>
+                            <li>2 Kişilik Oda</li>
+                            <li>1 Gece</li> 
+                        </ul>
+                        <p class="fiyat">Kişi Başı Ücret: 5.005₺</p>
+                    </div>
+                    <div class="paket">
+                        <h3>BEYOĞLU</h3>
+                        <ul>
+                            <li>1 Kişilik Oda</li>
+                            <li>1 Gece</li> 
+                        </ul>
+                        <p class="fiyat">Kişi Başı Ücret: 6.685₺</p>
+                    </div>
+                    <div class="paket">
+                        <h3>DOLMABAHÇE</h3>
+                        <ul>
+                            <li>3 Kişilik Oda</li>
+                            <li>1 Gece</li>
+                        </ul>
+                        <p class="fiyat">Kişi Başı Ücret: 4.865₺</p>
+                    </div>
+                </div>
+            </div>
+        </section> 
+    </main>
+
+    <footer>
+        </footer>
 </body>
 </html>
