css file src update

--- a/paketler.html
+++ b/paketler.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paketlerimiz | Samsun Atakum Rotaract</title>
-    <link rel="stylesheet" href="paketler.css">
+    <link rel="stylesheet" href="./paketler.css">
 </head>
 <body>
     <header>
