--- a/paketler.html
+++ b/paketler.html
@@ -34,7 +34,7 @@
                             <li>1 Kişilik Oda</li>
                             <li>2 Gece</li>
                         </ul>
-                        <p class="fiyat">Kişi Başı Ücret: 11.165₺</p>
+                        <p class="fiyat">Kişi Başı Ücret: 11.715₺</p>
                     </div>
                     <div class="paket">
                         <h3>PERA PALACE</h3>
@@ -42,7 +42,7 @@
                             <li>2 Kişilik Oda</li>
                             <li>2 Gece</li> 
                         </ul>
-                        <p class="fiyat">Kişi Başı Ücret: 7.805₺</p>
+                        <p class="fiyat">Kişi Başı Ücret: 8.355₺</p>
                     </div>
                     <div class="paket">
                         <h3>SÜMER PALACE</h3>
@@ -50,7 +50,7 @@
                             <li>3 Kişilik Oda</li>
                             <li>2 Gece</li>
                         </ul>
-                        <p class="fiyat">Kişi Başı Ücret: 7.525₺</p>
+                        <p class="fiyat">Kişi Başı Ücret: 8.075₺</p>
                     </div>
                     <div class="paket">
                         <h3>BANDIRMA</h3>
@@ -58,7 +58,7 @@
                             <li>2 Kişilik Oda</li>
                             <li>1 Gece</li> 
                         </ul>
-                        <p class="fiyat">Kişi Başı Ücret: 5.005₺</p>
+                        <p class="fiyat">Kişi Başı Ücret: 5.555₺</p>
                     </div>
                     <div class="paket">
                         <h3>BEYOĞLU</h3>
@@ -66,7 +66,7 @@
                             <li>1 Kişilik Oda</li>
                             <li>1 Gece</li> 
                         </ul>
-                        <p class="fiyat">Kişi Başı Ücret: 6.685₺</p>
+                        <p class="fiyat">Kişi Başı Ücret: 7.235₺</p>
                     </div>
                     <div class="paket">
                         <h3>DOLMABAHÇE</h3>
@@ -74,7 +74,28 @@
                             <li>3 Kişilik Oda</li>
                             <li>1 Gece</li>
                         </ul>
-                        <p class="fiyat">Kişi Başı Ücret: 4.865₺</p>
+                        <p class="fiyat">Kişi Başı Ücret: 5.415₺</p>
+                    </div>
+                    <div class="paket">
+                        <h3>Konaklamasız Katılım</h3>
+                        <ul>
+                            <li>1 Günlük</li>
+                        </ul>
+                        <p class="fiyat">Kişi Başı Ücret: 4.680₺</p>
+                    </div>
+                    <div class="paket">
+                        <h3>Konaklamasız Katılım</h3>
+                        <ul>
+                            <li>2 Günlük</li>
+                        </ul>
+                        <p class="fiyat">Kişi Başı Ücret: 7.605₺</p>
+                    </div>
+                    <div class="paket">
+                        <h3>GALA Katılım</h3>
+                        <ul>
+                            <li>Sadece Galaya Katılım.</li>
+                        </ul>
+                        <p class="fiyat">Kişi Başı Ücret: 2.755₺</p>
                     </div>
                 </div>
             </div>
