--- a/kayitol.html
+++ b/kayitol.html
@@ -28,8 +28,8 @@
       <h2>Önemli Bilgilendirme</h2>
       <p>Kayıt ücretini ödemek için iki seçeneğiniz var:</p>
       <ul>
-        <li>**EFT/Havale:** Ödemeyi sayfanın altındaki **Ödeme Bilgileri** bölümünde yazan hesaba yapabilirsiniz.</li>
-        <li>**Kredi Kartı ile Taksitli Ödeme:** "**Kartla Ödeme**" butonuna basarak anlaşmalı olduğumuz ajansın sitesine yönlendirilebilir ve ödemeyi kredi kartınızla taksitli olarak gerçekleştirebilirsiniz.</li>
+        <li><b>EFT/Havale:</b> Ödemeyi sayfanın altındaki <b>Ödeme Bilgileri</b> bölümünde yazan hesaba yapabilirsiniz.</li>
+        <li><b>Kredi Kartı ile Taksitli Ödeme:</b> <b>Kartla Öde</b> butonuna basarak anlaşmalı olduğumuz ajansın sitesine yönlendirilirsiniz. Ajansın sitesinde ödemeyi kredi kartınızla taksitli olarak gerçekleştirebilirsiniz.</li>
       </ul>
     </section>
 
@@ -46,7 +46,7 @@
           <p>IBAN: TR28 0004 6006 2188 8000 1786 88</p>
           <p>Açıklama: İsim Soyisim - Kulüp Adı - BAĞIŞ</p>
         </div>
-        <a href="https://antalyaseminer.com" target="_blank" class="kartla-odeme">KARTLA ÖDE</a>
+        <a href="https://www.antalyaseminer.com/Rezervasyon/Index/121" target="_blank" class="kartla-odeme">KARTLA ÖDE</a>
       </section>
 
  </main>
