--- a/kayitol.html
+++ b/kayitol.html
@@ -46,7 +46,7 @@
           <p>IBAN: TR28 0004 6006 2188 8000 1786 88</p>
           <p>Açıklama: İsim Soyisim - Kulüp Adı - BAĞIŞ</p>
         </div>
-        <a href="https://www.antalyaseminer.com/Rezervasyon/Index/121" target="_blank" class="kartla-odeme">KARTLA ÖDE</a>
+        <a href="https://www.antalyaseminer.com/Rezervasyon/Index/121" class="kartla-ode">KARTLA ÖDE</a>
       </section>
 
  </main>
