--- a/kayitol.html
+++ b/kayitol.html
@@ -46,8 +46,11 @@
           <p>IBAN: TR28 0004 6006 2188 8000 1786 88</p>
           <p>Açıklama: İsim Soyisim - Kulüp Adı - BAĞIŞ</p>
         </div>
-        <a href="https://www.antalyaseminer.com/Rezervasyon/Index/121" class="kartla-ode">KARTLA ÖDE</a>
       </section>
+
+      <div class="kartla-ode">
+        <a href="https://www.antalyaseminer.com/Rezervasyon/Index/121">KARTLA ÖDE</a>
+      </div>
 
  </main>
 
