--- a/kayitol.html
+++ b/kayitol.html
@@ -47,10 +47,8 @@
           <p>Açıklama: İsim Soyisim - Kulüp Adı - BAĞIŞ</p>
         </div>
       </section>
-
-      <div class="kartla-ode">
-        <a href="https://www.antalyaseminer.com/Rezervasyon/Index/121">KARTLA ÖDE</a>
-      </div>
+      
+      <a href="https://www.antalyaseminer.com/Rezervasyon/Index/121" class="kartla-ode">KARTLA ÖDE</a>
 
  </main>
 
