general design updates

--- a/paketler.html
+++ b/paketler.html
@@ -9,19 +9,20 @@
   <script src="https://kit.fontawesome.com/75a9b9d92e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <header>
-    <div class="logo">
-      <img src="./images/logo.png">
-      </div>      
-    <nav>
-      <a href="./index.html">Ana Sayfa</a>
-      <a href="./konferans.html">Konferans</a>
-      <a href="./takımlar.html">Takımlar</a>
-      <a href="./otel.html">Otel</a>
-      <a href="./paketler.html">Paketler</a>
-    </nav>
-    <a href="./kayitol.html" class="kayit-ol">KAYIT OLUN</a>
-  </header>
+    <header>
+        <div class="logo" onclick="window.location.href = './index.html'">
+          <img src="./images/logo.png">
+        </div>
+      
+        <nav>
+          <a href="./konferans.html">Konferans</a>
+          <a href="./takımlar.html">Takımlar</a>
+          <a href="./otel.html">Otel</a>
+          <a href="./paketler.html">Paketler</a>
+        </nav>
+      
+        <a href="./kayitol.html" class="kayit-ol">KAYIT OLUN</a>
+      </header>
     <main>
         <section class="paketlerimiz">
             <div class="container"> 
