--- a/takımlar.html
+++ b/takımlar.html
@@ -10,16 +10,17 @@
 </head>
 <body>
   <header>
-    <div class="logo">
+    <div class="logo" onclick="window.location.href = './index.html'">
       <img src="./images/logo.png">
-      </div>      
+    </div>
+  
     <nav>
-      <a href="./index.html">Ana Sayfa</a>
       <a href="./konferans.html">Konferans</a>
       <a href="./takımlar.html">Takımlar</a>
       <a href="./otel.html">Otel</a>
       <a href="./paketler.html">Paketler</a>
     </nav>
+  
     <a href="./kayitol.html" class="kayit-ol">KAYIT OLUN</a>
   </header>
     <main>
