--- a/kayitol.html
+++ b/kayitol.html
@@ -10,16 +10,17 @@
 </head>
 <body>
   <header>
-    <div class="logo">
+    <div class="logo" onclick="window.location.href = './index.html'">
       <img src="./images/logo.png">
-      </div>      
+    </div>
+  
     <nav>
-      <a href="./index.html">Ana Sayfa</a>
       <a href="./konferans.html">Konferans</a>
       <a href="./takımlar.html">Takımlar</a>
       <a href="./otel.html">Otel</a>
       <a href="./paketler.html">Paketler</a>
     </nav>
+  
     <a href="./kayitol.html" class="kayit-ol">KAYIT OLUN</a>
   </header>
   <main>
@@ -29,7 +30,7 @@
       <p>Kayıt ücretini ödemek için iki seçeneğiniz var:</p>
       <ul>
         <li><b>EFT/Havale:</b> Ödemeyi sayfanın altındaki <b>Ödeme Bilgileri</b> bölümünde yazan hesaba yapabilirsiniz.</li>
-        <li><b>Kredi Kartı ile Taksitli Ödeme:</b> <b>Kartla Öde</b> butonuna basarak anlaşmalı olduğumuz ajansın sitesine yönlendirilirsiniz. Ajansın sitesinde ödemeyi kredi kartınızla taksitli olarak gerçekleştirebilirsiniz.</li>
+        <li><b>Kredi Kartı ile Ödeme: Ödeme Bilgileri bölümünün altında bulunan</b> <b>Kartla Öde</b> butonuna basarak acentenin sitesine yönlendirilirsiniz. Acentenin sitesinde ödemeyi kredi kartınızla gerçekleştirebilir daha sonrasında bankanız aracılığıyla taksitlendirme yapabilirsiniz.</li>
       </ul>
     </section>
 
