--- a/kayitol.html
+++ b/kayitol.html
@@ -30,7 +30,7 @@
       <p>Kayıt ücretini ödemek için iki seçeneğiniz var:</p>
       <ul>
         <li><b>EFT/Havale:</b> Ödemeyi sayfanın altındaki <b>Ödeme Bilgileri</b> bölümünde yazan hesaba yapabilirsiniz.</li>
-        <li><b>Kredi Kartı ile Ödeme: Ödeme Bilgileri bölümünün altında bulunan</b> <b>Kartla Öde</b> butonuna basarak acentenin sitesine yönlendirilirsiniz. Acentenin sitesinde ödemeyi kredi kartınızla gerçekleştirebilir daha sonrasında bankanız aracılığıyla taksitlendirme yapabilirsiniz.</li>
+        <li><b>Kredi Kartı ile Ödeme:</b> Ödeme Bilgileri bölümünün altında bulunan <b>Kartla Öde</b> butonuna basarak acentenin sitesine yönlendirilirsiniz. Acentenin sitesinde ödemeyi kredi kartınızla gerçekleştirebilir daha sonrasında <b>bankanız aracılığıyla taksitlendirme yapabilirsiniz.</b></li>
       </ul>
     </section>
 
