--- a/otel.html
+++ b/otel.html
@@ -6,8 +6,8 @@
   <title>1923 Cumhuriyet Konferansı | Samsun Atakum Rotaract </title>
   <link rel="icon" type="image/x-icon" href="./images/favicon.png">
   <link rel="stylesheet" href="./otel.css">
-  <script src="https://kit.fontawesome.com/75a9b9d92e.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+  <script src="https://kit.fontawesome.com/75a9b9d92e.js" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 </head>
 <body>
@@ -15,14 +15,12 @@
     <div class="logo" onclick="window.location.href = './index.html'">
       <img src="./images/logo.png">
     </div>
-  
     <nav>
       <a href="./konferans.html">Konferans</a>
       <a href="./takımlar.html">Takımlar</a>
       <a href="./otel.html">Otel</a>
       <a href="./paketler.html">Paketler</a>
     </nav>
-  
     <a href="./kayitol.html" class="kayit-ol">KAYIT OLUN</a>
   </header>
   <main>
@@ -30,19 +28,20 @@
       <h1>Limak Limra Hotel</h1>
       <h2>10-12 Mayıs 2024</h2>
       <div class="image-gallery">
-          <img src="./images/p1.jpeg" alt="Hotel Image 1">
-          <img src="./images/p2.jpeg" alt="Hotel Image 2">
-          <img src="./images/p3.jpeg" alt="Hotel Image 3">
-          <img src="./images/p4.jpeg" alt="Hotel Image 4">
-          <img src="./images/p5.jpeg" alt="Hotel Image 5">
-          </div>
-  </section>
+        <img src="./images/p1.jpeg" alt="Hotel Image 1">
+        <img src="./images/p2.jpeg" alt="Hotel Image 2">
+        <img src="./images/p3.jpeg" alt="Hotel Image 3">
+        <img src="./images/p4.jpeg" alt="Hotel Image 4">
+        <img src="./images/p5.jpeg" alt="Hotel Image 5"> 
+      </div>
+    </section>
     <section class="otel-bilgileri">
       <h2>Konum</h2>
       <p>Limak Limra Hotel & Resort, Kiriş Mahallesi, 07980 Kemer/Antalya, Türkiye</p>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5388.978398341086!2d30.57352895234533!3d36.57084976228775!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14c3b6f9b9efdecf%3A0xa13c2682aad17e0a!2sLimak%20Limra%20Hotel%20%26%20Resort!5e0!3m2!1str!2str!4v1708957775726!5m2!1str!2str" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </section>  
-  </main>  
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5388.978398341086!2d30.57352895234533!3d36.57084976228775!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14c3b6f9b9efdecf%3A0xa13c2682aad17e0a!2sLimak%20Limra%20Hotel%20%26%20Resort!5e0!3m2!1str!2str!4v1708957775726!5m2!1str!2str" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </section>
+  </main>
   <footer>
     <div class="sosyal-medya">
       <a href="https://www.instagram.com/konferans35"><i class="fab fa-instagram"></i></a>
