--- a/index.html
+++ b/index.html
@@ -10,35 +10,32 @@
 </head>
 <body>
   <header>
-    <div class="logo" onclick="window.location.href = './index.html'">
-      <img src="./images/logo.png">
-    </div>
-  
+    <a href="./index.html" class="logo">
+      <img src="./images/logo.png" alt="Samsun Atakum Rotaract Kulübü">
+    </a>
     <nav>
       <a href="./konferans.html">Konferans</a>
       <a href="./takımlar.html">Takımlar</a>
       <a href="./otel.html">Otel</a>
       <a href="./paketler.html">Paketler</a>
     </nav>
-  
     <a href="./kayitol.html" class="kayit-ol">KAYIT OLUN</a>
   </header>
   <main>
-    <div class="icerik-bolmesi">
-      <div class="baslik">
-        <img src="./images/kapak.jpg" alt="Başlık Resmi" class="baslik-resmi"> 
-        <h1>1923 CUMHURİYET KONFERANSI</h1>
-        <h2>10-12 Mayıs 2024</h2>
-        <p>Samsun Atakum Rotaract Kulübü olarak Cumhuriyetimizin 100. yıl dönümünü ve 35. Rotaract Konferansını bir araya getirerek unutulmaz bir deneyim sunmaya hazırlanıyoruz.<br> 1923 Cumhuriyet Konferansı’nda ödül geceleri, takım oyunları, konforlu konaklama ve eğlenceli partiler yer alacak. Hem konferansların bilgilendirici atmosferinden hem de partilerin eğlenceli ortamından yararlanmak isteyen bütün Rotaractör dostlarımızı ve misafirlerimizi konferansa bekliyoruz!<br> Detaylar için websitemizde gezinebilir, sosyal medya hesaplarımızdan iletişime geçebilirsiniz.</p>
-      </div>
-   </div>
-    </main>
-    <footer>
-      <div class="sosyal-medya">
-        <a href="https://www.instagram.com/konferans35"><i class="fab fa-instagram"></i></a>
-        <a href="mailto:35.konferans@gmail.com"><i class="fa-solid fa-envelope"></i></a>
-      </div>
-      <p class="telif-hakkı">© 2024 Demir Bülbüloğlu - Tüm Hakları Saklıdır.</p>
-    </footer>
+    <section class="icerik-bolmesi">
+      <img src="./images/kapak.jpg" alt="Başlık Resmi" class="baslik-resmi">
+      <h2 class="baslik">1923 CUMHURİYET KONFERANSI</h2>
+      <p>Samsun Atakum Rotaract Kulübü olarak Cumhuriyetimizin 100. yıl dönümünü ve 35. Rotaract Konferansını bir araya getirerek unutulmaz bir deneyim sunmaya hazırlanıyoruz.</p>
+      <p>1923 Cumhuriyet Konferansı’nda ödül geceleri, takım oyunları, konforlu konaklama ve eğlenceli partiler yer alacak. Hem konferansların bilgilendirici atmosferinden hem de partilerin eğlenceli ortamından yararlanmak isteyen bütün Rotaractör dostlarımızı ve misafirlerimizi konferansa bekliyoruz!</p>
+      <p>Detaylar için websitemizde gezinebilir, sosyal medya hesaplarımızdan iletişime geçebilirsiniz.</p>
+    </section>
+  </main>
+  <footer>
+    <div class="sosyal-medya">
+      <a href="https://www.instagram.com/konferans35"><i class="fab fa-instagram"></i></a>
+      <a href="mailto:35.konferans@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+    </div>
+    <p class="telif-hakkı">© 2024 Demir Bülbüloğlu - Tüm Hakları Saklıdır.</p>
+  </footer>
 </body>
 </html>
