Instagram Button URL Update

--- a/otel.html
+++ b/otel.html
@@ -44,7 +44,7 @@
   </main>
   <footer>
     <div class="sosyal-medya">
-      <a href="https://www.instagram.com/konferans35"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.instagram.com/1923cumhuriyetkonferansi"><i class="fab fa-instagram"></i></a>
       <a href="mailto:35.konferans@gmail.com"><i class="fa-solid fa-envelope"></i></a>
     </div>
     <p class="telif-hakkı">© 2024 Demir Bülbüloğlu - Tüm Hakları Saklıdır.</p>
