--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>1923 Cumhuriyet Konferansı | Samsun Atakum Rotaract </title>
   <link rel="icon" type="image/x-icon" href="./images/favicon.png">
   <link rel="stylesheet" href="./index.css">
+  <script src="./geri-sayim.js"></script>
   <script src="https://kit.fontawesome.com/75a9b9d92e.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -22,6 +23,16 @@
     <a href="./kayitol.html" class="kayit-ol">KAYIT OLUN</a>
   </header>
   <main>
+    <section class="geri-sayim">
+      <h2>Konferansa Kalan Süre</h2>
+      <div class="sayac">
+        <div class="gunler"><span>0</span> Gün</div>
+        <div class="saatler"><span>0</span> Saat</div>
+        <div class="dakikalar"><span>0</span> Dakika</div>
+        <div class="saniyeler"><span>0</span> Saniye</div>
+      </div>
+    </section>    
+
     <section class="icerik-bolmesi">
       <img src="./images/kapak.jpg" alt="Başlık Resmi" class="baslik-resmi">
       <h2 class="baslik">1923 CUMHURİYET KONFERANSI</h2>
