--- a/paketler.html
+++ b/paketler.html
@@ -32,7 +32,8 @@
                             <li>1 Kişilik Oda</li>
                             <li>2 Gece</li>
                         </ul>
-                        <p class="fiyat">Kişi Başı Ücret: 11.715₺</p>
+                        <p class="fiyat">Kişi Başı Ücret: 11.715₺ (1.Dalga)</p>
+                        <p class="fiyat">Kişi Başı Ücret: X₺ (2.Dalga)</p>
                     </div>
                     <div class="paket">
                         <h3>PERA PALACE</h3>
@@ -40,7 +41,8 @@
                             <li>2 Kişilik Oda</li>
                             <li>2 Gece</li> 
                         </ul>
-                        <p class="fiyat">Kişi Başı Ücret: 8.355₺</p>
+                        <p class="fiyat">Kişi Başı Ücret: 8.355₺ (1.Dalga)</p>
+                        <p class="fiyat">Kişi Başı Ücret: X₺ (2.Dalga)</p>
                     </div>
                     <div class="paket">
                         <h3>SÜMER PALACE</h3>
@@ -48,7 +50,8 @@
                             <li>3 Kişilik Oda</li>
                             <li>2 Gece</li>
                         </ul>
-                        <p class="fiyat">Kişi Başı Ücret: 8.075₺</p>
+                        <p class="fiyat">Kişi Başı Ücret: 8.075₺ (1.Dalga)</p>
+                        <p class="fiyat">Kişi Başı Ücret: X₺ (2.Dalga)</p>
                     </div>
                     <div class="paket">
                         <h3>BANDIRMA</h3>
@@ -56,7 +59,8 @@
                             <li>2 Kişilik Oda</li>
                             <li>1 Gece</li> 
                         </ul>
-                        <p class="fiyat">Kişi Başı Ücret: 5.555₺</p>
+                        <p class="fiyat">Kişi Başı Ücret: 5.555₺ (1.Dalga)</p>
+                        <p class="fiyat">Kişi Başı Ücret: X₺ (2.Dalga)</p>
                     </div>
                     <div class="paket">
                         <h3>BEYOĞLU</h3>
@@ -64,7 +68,8 @@
                             <li>1 Kişilik Oda</li>
                             <li>1 Gece</li> 
                         </ul>
-                        <p class="fiyat">Kişi Başı Ücret: 7.235₺</p>
+                        <p class="fiyat">Kişi Başı Ücret: 7.235₺ (1.Dalga)</p>
+                        <p class="fiyat">Kişi Başı Ücret: X₺ (2.Dalga)</p>
                     </div>
                     <div class="paket">
                         <h3>DOLMABAHÇE</h3>
@@ -72,28 +77,32 @@
                             <li>3 Kişilik Oda</li>
                             <li>1 Gece</li>
                         </ul>
-                        <p class="fiyat">Kişi Başı Ücret: 5.415₺</p>
+                        <p class="fiyat">Kişi Başı Ücret: 5.415₺ (1.Dalga)</p>
+                        <p class="fiyat">Kişi Başı Ücret: X₺ (2.Dalga)</p>
                     </div>
                     <div class="paket">
                         <h3>Konaklamasız Katılım</h3>
                         <ul>
                             <li>1 Günlük</li>
                         </ul>
-                        <p class="fiyat">Kişi Başı Ücret: 4.680₺</p>
+                        <p class="fiyat">Kişi Başı Ücret: 4.680₺ (1.Dalga)</p>
+                        <p class="fiyat">Kişi Başı Ücret: X₺ (2.Dalga)</p>
                     </div>
                     <div class="paket">
                         <h3>Konaklamasız Katılım</h3>
                         <ul>
                             <li>2 Günlük</li>
                         </ul>
-                        <p class="fiyat">Kişi Başı Ücret: 7.605₺</p>
+                        <p class="fiyat">Kişi Başı Ücret: 7.605₺ (1.Dalga)</p>
+                        <p class="fiyat">Kişi Başı Ücret: X₺ (2.Dalga)</p>
                     </div>
                     <div class="paket">
                         <h3>GALA Katılım</h3>
                         <ul>
                             <li>Sadece Galaya Katılım.</li>
                         </ul>
-                        <p class="fiyat">Kişi Başı Ücret: 2.755₺</p>
+                        <p class="fiyat">Kişi Başı Ücret: 2.755₺ (1.Dalga)</p>
+                        <p class="fiyat">Kişi Başı Ücret: X₺ (2.Dalga)</p>
                     </div>
                 </div>
             </div>
