--- a/paketler.html
+++ b/paketler.html
@@ -33,7 +33,7 @@
                             <li>2 Gece</li>
                         </ul>
                         <p class="fiyat">Kişi Başı Ücret: 11.715₺ (1.Dalga)</p>
-                        <p class="fiyat">Kişi Başı Ücret: X₺ (2.Dalga)</p>
+                        <p class="fiyat">Kişi Başı Ücret: 12.045₺ (2.Dalga)</p>
                     </div>
                     <div class="paket">
                         <h3>PERA PALACE</h3>
@@ -42,7 +42,7 @@
                             <li>2 Gece</li> 
                         </ul>
                         <p class="fiyat">Kişi Başı Ücret: 8.355₺ (1.Dalga)</p>
-                        <p class="fiyat">Kişi Başı Ücret: X₺ (2.Dalga)</p>
+                        <p class="fiyat">Kişi Başı Ücret: 8.685₺ (2.Dalga)</p>
                     </div>
                     <div class="paket">
                         <h3>SÜMER PALACE</h3>
@@ -51,7 +51,7 @@
                             <li>2 Gece</li>
                         </ul>
                         <p class="fiyat">Kişi Başı Ücret: 8.075₺ (1.Dalga)</p>
-                        <p class="fiyat">Kişi Başı Ücret: X₺ (2.Dalga)</p>
+                        <p class="fiyat">Kişi Başı Ücret: 8.275₺ (2.Dalga)</p>
                     </div>
                     <div class="paket">
                         <h3>BANDIRMA</h3>
@@ -60,7 +60,7 @@
                             <li>1 Gece</li> 
                         </ul>
                         <p class="fiyat">Kişi Başı Ücret: 5.555₺ (1.Dalga)</p>
-                        <p class="fiyat">Kişi Başı Ücret: X₺ (2.Dalga)</p>
+                        <p class="fiyat">Kişi Başı Ücret: 5.885₺ (2.Dalga)</p>
                     </div>
                     <div class="paket">
                         <h3>BEYOĞLU</h3>
@@ -69,7 +69,7 @@
                             <li>1 Gece</li> 
                         </ul>
                         <p class="fiyat">Kişi Başı Ücret: 7.235₺ (1.Dalga)</p>
-                        <p class="fiyat">Kişi Başı Ücret: X₺ (2.Dalga)</p>
+                        <p class="fiyat">Kişi Başı Ücret: 7.565₺ (2.Dalga)</p>
                     </div>
                     <div class="paket">
                         <h3>DOLMABAHÇE</h3>
@@ -78,7 +78,7 @@
                             <li>1 Gece</li>
                         </ul>
                         <p class="fiyat">Kişi Başı Ücret: 5.415₺ (1.Dalga)</p>
-                        <p class="fiyat">Kişi Başı Ücret: X₺ (2.Dalga)</p>
+                        <p class="fiyat">Kişi Başı Ücret: 5.745₺ (2.Dalga)</p>
                     </div>
                     <div class="paket">
                         <h3>Konaklamasız Katılım</h3>
@@ -86,7 +86,7 @@
                             <li>1 Günlük</li>
                         </ul>
                         <p class="fiyat">Kişi Başı Ücret: 4.680₺ (1.Dalga)</p>
-                        <p class="fiyat">Kişi Başı Ücret: X₺ (2.Dalga)</p>
+                        <p class="fiyat">Kişi Başı Ücret: 4.830₺ (2.Dalga)</p>
                     </div>
                     <div class="paket">
                         <h3>Konaklamasız Katılım</h3>
@@ -94,7 +94,7 @@
                             <li>2 Günlük</li>
                         </ul>
                         <p class="fiyat">Kişi Başı Ücret: 7.605₺ (1.Dalga)</p>
-                        <p class="fiyat">Kişi Başı Ücret: X₺ (2.Dalga)</p>
+                        <p class="fiyat">Kişi Başı Ücret: 7.905₺ (2.Dalga)</p>
                     </div>
                     <div class="paket">
                         <h3>GALA Katılım</h3>
@@ -102,7 +102,7 @@
                             <li>Sadece Galaya Katılım.</li>
                         </ul>
                         <p class="fiyat">Kişi Başı Ücret: 2.755₺ (1.Dalga)</p>
-                        <p class="fiyat">Kişi Başı Ücret: X₺ (2.Dalga)</p>
+                        <p class="fiyat">Kişi Başı Ücret: 2.955₺ (2.Dalga)</p>
                     </div>
                 </div>
             </div>
