--- a/kayitol.html
+++ b/kayitol.html
@@ -33,6 +33,13 @@
       <div class="form">
           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdgAWA_2r4y7w74C-cmTnFPeKQOgtMQAB5nQumeFuIondn7UA/viewform?embedded=true" width="640" height="1120" frameborder="0" marginheight="0" marginwidth="0">Yükleniyor…</iframe>
       </div>
+      <section class="onemli-bilgilendirme">
+        <h2>Önemli Bilgilendirme</h2>
+        <ul>
+          <li>1. Dalga Kontenjanı için kayıt formu doldurup, onay maili alan katılımcılarımız 30.03.2024 tarihine kadar ödeme yapabilirler. Birinci dalgaya kayıt olan katılımcılarımız bize (+90) 541 820 08 32 numaralı telefondan veya 35.konferans@gmail.com e-posta adresinden ulaşıp ödeme linkini temin edebilirler.</li>
+          <li>23.03.2024 Tarihi itibariyle <b>2. DALGA</b> kayıtlarını gerçekleştirmek isteyen siz değerli katılımcılarımızın, ödemelerini yaparken 2. Dalga için açılan seçenekleri seçtiğinizden emin olmanız rica olunur.</li>
+        </ul>
+      </section>
       <section class="odeme-bilgileri">
         <h2>Ödeme Bilgileri</h2>
         <p>Lütfen ödemeyi aşağıdaki hesaba yapınız:</p>
