update to program tab

--- a/program.html
+++ b/program.html
@@ -5,11 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>1923 Cumhuriyet Konferansı | Samsun Atakum Rotaract</title>
   <link rel="icon" type="image/x-icon" href="./images/favicon.png">
-  <link rel="stylesheet" href="./program.css">
+  <link rel="stylesheet" href="./takımlar.css">
   <script src="https://kit.fontawesome.com/75a9b9d92e.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
+    <div class="logo" onclick="window.location.href = './index.html'">
+      <img src="./images/logo.png">
     </div>
     <nav>
       <a href="./konferans.html">Konferans</a>
@@ -29,13 +31,12 @@
       <!-- Program içeriği buraya gelecek -->
     </div>
   </main>
-  <footer>
+   <footer>
     <div class="sosyal-medya">
       <a href="https://www.instagram.com/1923cumhuriyetkonferansi"><i class="fab fa-instagram"></i></a>
       <a href="mailto:35.konferans@gmail.com"><i class="fa-solid fa-envelope"></i></a>
     </div>
     <p class="telif-hakkı">© 2024 Demir Bülbüloğlu - Tüm Hakları Saklıdır.</p>
   </footer>
-  <script src="./program.js"></script> 
 </body>
 </html>
