--- a/paketler.html
+++ b/paketler.html
@@ -18,6 +18,7 @@
           <a href="./takımlar.html">Takımlar</a>
           <a href="./otel.html">Otel</a>
           <a href="./paketler.html">Paketler</a>
+          <a href="./program.html">Program</a>
         </nav>
         <a href="./kayitol.html" class="kayit-ol">KAYIT OLUN</a>
       </header>
