--- a/program.html
+++ b/program.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>1923 Cumhuriyet Konferansı | Samsun Atakum Rotaract</title>
   <link rel="icon" type="image/x-icon" href="./images/favicon.png">
-  <link rel="stylesheet" href="./takımlar.css">
+  <link rel="stylesheet" href="./program.css">
+  <script src="./program.js"></script>
   <script src="https://kit.fontawesome.com/75a9b9d92e.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -18,6 +19,7 @@
       <a href="./takımlar.html">Takımlar</a>
       <a href="./otel.html">Otel</a>
       <a href="./paketler.html">Paketler</a>
+      <a href="./program.html">Program</a>
     </nav>
     <a href="./kayitol.html" class="kayit-ol">KAYIT OLUN</a>
   </header>
