--- a/program.html
+++ b/program.html
@@ -6,7 +6,7 @@
   <title>1923 Cumhuriyet Konferansı | Samsun Atakum Rotaract</title>
   <link rel="icon" type="image/x-icon" href="./images/favicon.png">
   <link rel="stylesheet" href="./program.css">
-  <script src="./program.js"></script>
+  <script src="program.js"></script>
   <script src="https://kit.fontawesome.com/75a9b9d92e.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -25,20 +25,31 @@
   </header>
   <main>
     <div class="program-secici">
-      <button class="gun-secici" data-gun="10">10 Mayıs</button>
-      <button class="gun-secici" data-gun="11">11 Mayıs</button>
-      <button class="gun-secici" data-gun="12">12 Mayıs</button>
+      <button class="gun-secici" data-gun="10">10 Mayıs Cuma</button>
+      <button class="gun-secici" data-gun="11">11 Mayıs Cumartesi</button>
+      <button class="gun-secici" data-gun="12">12 Mayıs Pazar</button>
     </div>
     <div class="program-icerik">
-      <!-- Program içeriği buraya gelecek -->
+      <table class="program-tablo">
+        <thead>
+          <tr>
+            <th>Saat</th>
+            <th>Etkinlik</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- Program rows will be added here -->
+        </tbody>
+      </table>
     </div>
   </main>
-   <footer>
+  <footer>
     <div class="sosyal-medya">
       <a href="https://www.instagram.com/1923cumhuriyetkonferansi"><i class="fab fa-instagram"></i></a>
       <a href="mailto:35.konferans@gmail.com"><i class="fa-solid fa-envelope"></i></a>
     </div>
     <p class="telif-hakkı">© 2024 Demir Bülbüloğlu - Tüm Hakları Saklıdır.</p>
   </footer>
+  <script src="./program.js"></script> 
 </body>
 </html>
